fix(VAppBar/VToolbar): use max-width to avoid overflow
when using the **app** and **absolute** prop on v-app-bar and a v-navigation-drawer, the bar would
overflow

fixes #8364

--- a/packages/vuetify/src/components/VToolbar/VToolbar.sass
+++ b/packages/vuetify/src/components/VToolbar/VToolbar.sass
@@ -5,6 +5,7 @@
 .v-toolbar
   contain: layout
   flex: 1 1 auto
+  max-width: 100%
   // Needs increased specificity
   &.v-sheet
     transition: $toolbar-transition
@@ -97,7 +98,6 @@
 .v-toolbar.v-toolbar--absolute
   position: absolute
   top: 0
-  width: 100%
   z-index: 1
 
 .v-toolbar.v-toolbar--bottom
@@ -110,7 +110,7 @@
 
 .v-toolbar.v-toolbar--collapsed
   border-bottom-right-radius: 24px
-  width: 112px
+  max-width: 112px
 
   .v-toolbar__title,
   .v-toolbar__extension
